--- a/templates/outer-loop/Dockerfile
+++ b/templates/outer-loop/Dockerfile
@@ -1,27 +1,28 @@
-# Step 1: Build the user's application
+# Step 1: Build the user's application.
 FROM {{.STACK_IMAGE}} as compile
 
-# Make a well known place for shared library jars separate from the rest of the <server> contents (to help with caching)
+# Make a well known place for shared library jars separate from the rest of the <server> contents (to help with caching).
 RUN mkdir /work/configlibdir \
    && mkdir /work/config \
    &&  mkdir /work/shared
 
-# Copy the rest of the application source
-COPY --chown=1001:0 ./src /work/outer-loop-app/src
-COPY --chown=1001:0 ./pom.xml /work/outer-loop-app/pom.xml
+# Copy application source and build data.
+COPY --chown=1001:0 ./. /work/outer-loop-app/tmp/
+RUN cp -r /work/outer-loop-app/tmp/src /work/outer-loop-app/.; \
+    cp /work/outer-loop-app/tmp/build.gradle  /work/outer-loop-app/.
+RUN cp -r /work/outer-loop-app/tmp/*.gradle /work/outer-loop-app/tmp/gradle.* /work/outer-loop-app/tmp/gradle* /work/outer-loop-app/. 2>/dev/null | true; \
+    rm -rf /work/outer-loop-app/tmp
 
-# Build (and run unit tests) 
-#  also liberty:create copies config from src->target
-#  also remove quick-start-security.xml since it's convenient for local dev mode but should not be in the production image.
+# Build the application and create the Open Liberty installation.
+# This step removes quick-start-security.xml since it's convenient for local dev mode but should not be in the production image.
 RUN cd /work/outer-loop-app && \
     echo "QUICK START SECURITY IS NOT SECURE FOR PRODUCTION ENVIRONMENTS. IT IS BEING REMOVED" && \
     rm -f src/main/liberty/config/configDropins/defaults/quick-start-security.xml && \
-    mvn -e liberty:create package
+    gradle -g /.gradle assemble libertyCreate -Dliberty.runtime.version={{.OL_RUNTIME_VERSION}}
 
 # Process any resources or shared libraries - if they are present in the dependencies block for this project (there may be none potentially)
 # test to see if each is present and move to a well known location for later processing in the next stage
-# 
-RUN cd /work/outer-loop-app/target/liberty/wlp/usr/servers && \
+RUN cd /work/outer-loop-app/build/wlp/usr/servers; \
     if [ -d ./*/lib ]; then mv ./*/lib /work/configlibdir; fi && \
     if [ ! -d /work/configlibdir/lib ]; then mkdir /work/configlibdir/lib; fi && \
     mv -f */* /work/config/ && \
@@ -30,11 +31,10 @@ RUN cd /work/outer-loop-app/target/liberty/wlp/usr/servers && \
 # Step 2: Package Open Liberty image
 FROM {{.OL_UBI_IMAGE}}
 
-# 2a) Copy user defined shared resources 
+# 2a) Copy user defined shared resources.
 COPY --from=compile --chown=1001:0 /work/shared /opt/ol/wlp/usr/shared/
 
-# 2b) Copy user defined shared libraries
-#      but can't assume config/lib exists - copy from previous stage to a tmp holding place and test
+# 2b) Copy user defined shared libraries.
 COPY --from=compile --chown=1001:0 /work/configlibdir/ /config
 
 # 2c) Copy user defined server config, bootstrap.properties, etc.
@@ -62,10 +62,10 @@ RUN if [ "$ADD_MP_HEALTH" = "true" ]; then \
 
 RUN rm -rf /tmp/stack
 
-# 2e) Copy the application binary
-COPY --from=compile --chown=1001:0 /work/outer-loop-app/target/*.[ew]ar /config/apps
+# 2f) Copy the application binary.
+COPY --from=compile --chown=1001:0 /work/outer-loop-app/build/libs/*.[ew]ar /config/apps
 
-# 2f) Run configure.sh
+# 2f) Run configure.sh.
 ENV OPENJ9_SCC=true
 RUN configure.sh && \
     chmod 664 /opt/ol/wlp/usr/servers/*/configDropins/defaults/keystore.xml
