--- a/templates/stackimage/Dockerfile
+++ b/templates/stackimage/Dockerfile
@@ -1,4 +1,5 @@
-FROM {{.BASE_OS_IMAGE}} AS maven
+# 1. Aquire all software prerequisites.
+FROM {{.BASE_OS_IMAGE}} AS prereq
 
 RUN yum upgrade --disableplugin=subscription-manager -y \
    && yum clean --disableplugin=subscription-manager packages \
@@ -6,30 +7,30 @@ RUN yum upgrade --disableplugin=subscription-manager -y \
 
 RUN  useradd --uid 1001 --gid 0 --shell /bin/bash --create-home java_user
 
-# Dependency install
+# Command dependency installation.
 RUN yum install --disableplugin=subscription-manager -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm \
-   && yum install --disableplugin=subscription-manager -y unzip curl ca-certificates wget xmlstarlet
+   && yum install --disableplugin=subscription-manager -y unzip curl ca-certificates wget xmlstarlet procps
 
-# Maven install
-ARG MAVEN_VERSION=3.6.3
-ARG SHA=c35a1803a6e70a126e80b2b3ae33eed961f83ed74d18fcd16909b2d44d7dada3203f1ffe726c17ef8dcca2dcaa9fca676987befeadc9b9f759967a8cb77181c0
-ARG BASE_URL=https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/
+# Gradle installation.
+ARG GRADLE_VERSION=6.8.2
+ARG SHA=8de6efc274ab52332a9c820366dd5cf5fc9d35ec7078fd70c8ec6913431ee610
+ARG BASE_URL=https://services.gradle.org/distributions
+ARG GRADLE_DIR=/usr/share/gradle
 
-RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
-  && curl -fsSL -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
-  && echo "${SHA}  /tmp/apache-maven.tar.gz" | sha512sum -c - \
-  && tar -xzf /tmp/apache-maven.tar.gz -C /usr/share/maven --strip-components=1 \
-  && rm -f /tmp/apache-maven.tar.gz \
-  && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
+RUN mkdir -p ${GRADLE_DIR} /tmp/stack/gradle/unzip\
+  && curl -fsSL -o /tmp/stack/gradle/gradle.zip ${BASE_URL}/gradle-${GRADLE_VERSION}-bin.zip \
+  && echo "${SHA}  /tmp/stack/gradle/gradle.zip" | sha256sum --check - \
+  && unzip -d /tmp/stack/gradle/unzip /tmp/stack/gradle/gradle.zip \
+  && cp -r /tmp/stack/gradle/unzip/gradle-*/* ${GRADLE_DIR} \
+  && rm -rf /tmp/stack \
+  && ln -s ${GRADLE_DIR}/bin/gradle /usr/bin/gradle
 
-FROM maven AS builder
+# 2. Cache all needed data required to build and run the liberty server in dev mode.
+FROM prereq AS builder
 
 ENV OPENJ9_JAVA_OPTIONS="-Xshareclasses:name=liberty,nonfatal,cacheDir=/output/.classCache/"
 
-RUN umask -S u=rwx,g=rwx,o=rx; mkdir -p /mvn/repository \
-  && chown -R java_user /mvn \
-  && chmod 775 /mvn \
-  && mkdir -p /stacks/java-openliberty/priming-app \
+RUN mkdir -p /stacks/java-openliberty/priming-app \
   && mkdir -p /stacks/java-openliberty/config \
   && chown -R java_user /stacks \
   && mkdir -p /output \
@@ -40,72 +41,49 @@ COPY ./LICENSE /licenses/
 
 USER java_user
 
-ADD ./config /stacks/java-openliberty/config
-ADD ./priming-app/src /stacks/java-openliberty/priming-app/src
-COPY --chown=1001:0 ./priming-app/pom.xml /stacks/java-openliberty/priming-app/
+COPY ./config /stacks/java-openliberty/config
+COPY ./priming-app/src /stacks/java-openliberty/priming-app/src
+COPY ./priming-app/build.gradle ./priming-app/settings.gradle /stacks/java-openliberty/priming-app/
 
 WORKDIR /stacks/java-openliberty/priming-app
 
 ARG LIBERTY_RUNTIME_VERSION={{.OL_RUNTIME_VERSION}}
 
-RUN umask -S u=rwx,g=rwx,o=rx; mvn -B -e -DserverName=tmp -Dmaven.repo.local=/mvn/repository -Dliberty.runtime.version=${LIBERTY_RUNTIME_VERSION} -DskipITs=true install
+# Build the priming application to populate the cache (java_user home dir: /home/java_user/.gradle).
+RUN umask -S u=rwx,g=rwx,o=rx; gradle build -Dliberty.runtime.version=${LIBERTY_RUNTIME_VERSION} --no-daemon
 
-#
-# A hack maybe but there's quite a few dependencies that only are detected when dev mode is executed, due to use of mojo executor, etc.
-#
-# If you see this then you got enough cached, but if you don't, you need to build with --no-cache next time or you won't even redo this step
-#
-# [INFO]
-# [INFO] -------------------------------------------------------
-# [INFO]  T E S T S
-# [INFO] -------------------------------------------------------
-# [INFO] Running dev.odo.starter.it.EndpointIT
-# [INFO] Tests run: 1, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 0.134 s - in dev.odo.starter.it.EndpointIT
-# [INFO]
-# [INFO] Results:
-# [INFO]
-# [INFO] Tests run: 1, Failures: 0, Errors: 0, Skipped: 0
-# [INFO]
-# [INFO] Failsafe report directory: /stacks/java-openliberty/priming-app/target/test-reports/it
-# [INFO] Integration tests finished.
-#
-# Done sleeping
-
-#
-RUN nohup bash -c "umask -S u=rwx,g=rwx,o=rx; mvn -B -e -DserverName=tmp -Dmaven.repo.local=/mvn/repository -Dliberty.runtime.version=${LIBERTY_RUNTIME_VERSION} liberty:dev -DhotTests=true &" \
+# Start the Open Liberty server in dev mode. There are dependencies that are detected during dev mode execution due to the use of mojo executor, etc.
+RUN nohup bash -c "umask -S u=rwx,g=rwx,o=rx; gradle libertyDev -Dliberty.runtime.version=${LIBERTY_RUNTIME_VERSION} --hotTests &" \
  && sleep 600 \
  && echo  && echo "Done sleeping" && echo
 
-# Grab the runtime artifact as well, it's big and it might be useful
-RUN umask -S u=rwx,g=rwx,o=rx; mvn -B -e -Dmaven.repo.local=/mvn/repository -Dartifact=io.openliberty:openliberty-runtime:${LIBERTY_RUNTIME_VERSION}:zip -DrepoUrl=https://repo1.maven.org/maven2/ org.apache.maven.plugins:maven-dependency-plugin:3.1.2:get
+# Delete the defaultServer directory created during libertyDev task execution. Users will customize their own. 
+RUN rm -rf /stacks/java-openliberty/priming-app/build/wlp/usr/servers/defaultServer
 
-# Delete the server, users will create their own server
-RUN rm -rf /stacks/java-openliberty/priming-app/target/liberty/wlp/usr/servers/tmp
-# Don't let the sample appear in the user repo
-RUN rm -rf /mvn/repository/dev/odo/java-openliberty/samples/priming-app
-
-FROM maven
+# 3. Gather all installed software, Open Liberty basic installation, and cached Open Liberty data into the final image. 
+FROM prereq
 
 ENV OPENJ9_JAVA_OPTIONS="-Xshareclasses:name=liberty,nonfatal,cacheDir=/output/.classCache/"
 
 RUN mkdir -p /output \
   && chown -R java_user /output \
   && chmod 775 /output \
-  && mkdir -p /opt/ol \
+  && mkdir -p /opt/ol/wlp \
   && chown -R java_user /opt/ol \
-  && chmod 775 /opt/ol \
+  && chmod 775 /opt/ol /opt/ol/wlp \
   && mkdir -p /work/outer-loop-app \
   && chown -R java_user /work \
   && chmod -R 775 /work \
   && mkdir -p /stack/ol/config/configDropins/defaults \
   && chmod -R 775 /stack/ol/config/configDropins/defaults
 
-# Point to local /mvn/repository within container
-COPY --chown=1001:0 ./mvn-stack-settings.xml /usr/share/maven/conf/settings.xml
-COPY --chown=1001:0 --from=builder /mvn /mvn
+COPY --chown=1001:0 --from=builder /home/java_user/.gradle /.gradle
+
+# Remove daemon cached data to avoid write issues.
+RUN  rm -rf /.gradle/daemon; chmod -R 775 /.gradle
 
 COPY --chown=1001:0 --from=builder /stacks/java-openliberty/config/configDropins/defaults/ /stack/ol/config/configDropins/defaults/
-COPY --chown=1001:0 --from=builder /stacks/java-openliberty/priming-app/target/liberty /opt/ol
+COPY --chown=1001:0 --from=builder /stacks/java-openliberty/priming-app/build/wlp /opt/ol/wlp
 COPY --chown=1001:0 ./LICENSE /licenses/
 
 USER java_user
