--- a/templates/meta.yaml
+++ b/templates/meta.yaml
@@ -1,5 +1,5 @@
-name: java-openliberty
-displayName: "Open Liberty"
-description: "Open Liberty microservice in Java"
+name: java-openliberty-gradle
+displayName: "Open Liberty Gradle"
+description: "Open Liberty microservice in Java built with gradle"
 language: "java"
 projectType: "docker"
