--- a/.github/workflows/stack-regression-tests.yml
+++ b/.github/workflows/stack-regression-tests.yml
@@ -1,4 +1,4 @@
-name: stack-regression-tests
+name: gralde-stack-regression-tests
 on:
   pull_request:
     branches:
@@ -7,30 +7,30 @@ jobs:
    stack-tests:
      runs-on: ubuntu-latest
      steps:
-     
-      - name: Checkout
+
+      - name: 'Setup: Checkout'
         uses: actions/checkout@v2
         
-      - name: Setup Minikube
-        uses: manusa/actions-setup-minikube@v2.3.0
+      - name: 'Setup: Install Minikube'
+        uses: manusa/actions-setup-minikube@v2.3.1
         with:
           minikube version: 'v1.11.0'
           kubernetes version: 'v1.17.0'
           github token: ${{ secrets.GITHUB_TOKEN }}
-          start args: '--addons=registry --addons=ingress' 
-    
-      - name: Wait for nodes to be ready
+          start args: '--addons=registry --addons=ingress --insecure-registry "10.0.0.0/24"' 
+
+      - name: 'Setup: Wait for nodes to be ready'
         run: |
           while [[ $(kubectl get nodes -o 'jsonpath={..status.conditions[?(@.type=="Ready")].status}') != "True" ]]; do 
           echo "waiting for nodes" && sleep 1; 
           done
     
-      - name: Install odo
+      - name: 'Setup: Install odo'
         run: | 
          sudo curl -L https://mirror.openshift.com/pub/openshift-v4/clients/odo/latest/odo-linux-amd64 -o /usr/local/bin/odo
          sudo chmod +x /usr/local/bin/odo
-    
-      - name: Print version info
+
+      - name: 'Setup: Print version info'
         run: |
          set -x
          docker version
@@ -38,15 +38,41 @@ jobs:
          odo version
          minikube version
          set +x
-        
-      - name: Build stack
+
+      - name: 'Setup: Install the Open Liberty operator'
+        run: ./test/utils.sh installOpenLibertyOperator
+    
+      - name: 'Setup: Build stack'
         run: ./test/utils.sh buildStack
         
-      - name: Build stack image
+      - name: 'Setup: Build stack image'
         run: ./test/utils.sh buildStackImage
-     
-      - name: Inner loop test
-        run: ./test/stack-test-inner-loop.sh
-        
-      - name: Outer loop test
-        run: ./test/stack-test-outer-loop.sh
+
+      - name: 'Test: InnerLoop: Basic'
+        run: ./test/inner-loop/basic-test.sh
+
+      - name: 'Test: InnerLoop: microprofile v3 regression'
+        run: ./test/inner-loop/mp3-regression-test.sh
+
+      - name: 'Test: InnerLoop: Devfile uses an official gradle image'
+        run: ./test/inner-loop/gradle-image-test.sh
+
+      # TODO: Requires official stack gradle image.
+      #- name: 'Test: InnerLoop: Devfile regression'
+      #  run: ./test/inner-loop/devfile-regression-test.sh
+
+      # TODO : Requires devfile in samples or create one here.
+      #- name: 'Test: InnerLoop: Devifle uses volume and parent entries'
+      #  run: ./test/inner-loop/volume-parent-test.sh
+      
+      - name: 'Test: OuterLoop: Basic'
+        run: ./test/outer-loop/basic-test.sh
+
+      - name: 'Test: OuterLoop: Docker build MPH-off SCC-off args'
+        run: ./test/outer-loop/docker-build-mphOff-sccOff-test.sh
+
+      - name: 'Test: OuterLoop: Docker build with MPH-on SCC-off args'
+        run: ./test/outer-loop/docker-build-mphOn-sccOff-test.sh
+
+      - name: 'Test: OuterLoop: Docker build with MPH-off SCC-on args'
+        run: ./test/outer-loop/docker-build-mphOff-sccOn-test.sh
