--- a/test/files/intro-app/microprofile-v3/build.gradle
+++ b/test/files/intro-app/microprofile-v3/build.gradle
@@ -14,21 +14,25 @@
  * limitations under the License.
  */
 group = 'dev.odo.java-openliberty.samples'
-description = 'OpenLiberty Application Stack primer built with Gradle'
+description = 'OpenLiberty Application Stack intro built with Gradle'
 
+// Repositories to use.
 repositories {
     mavenCentral()
 }
 
+// Plugins.
 apply plugin: 'war'
 apply plugin: 'liberty'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+// Java properties.
+sourceCompatibility = 11
+targetCompatibility = 11
 compileJava.options.encoding = 'UTF-8'
 
+// Software dependencies.
 dependencies {
-    providedCompile 'org.eclipse.microprofile:microprofile:4.0.1'   
+    providedCompile 'org.eclipse.microprofile:microprofile:3.3'   
     providedCompile 'javax:javaee-api:8.0.1'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
     testImplementation 'org.microshed:microshed-testing-liberty:0.9'
@@ -36,15 +40,17 @@ dependencies {
     testImplementation 'org.slf4j:slf4j-log4j12:1.7.30'
 }
 
+// Liberty-gradle-plugin.
 buildscript {
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath 'io.openliberty.tools:liberty-gradle-plugin:3.2'
+        classpath 'io.openliberty.tools:liberty-gradle-plugin:3.1.2'
     }
 }
 
+// Open Liberty definitions.
 liberty {
     runtime = ['group':'io.openliberty','name':'openliberty-kernel','version':System.getProperty("liberty.runtime.version")]
     server {
@@ -53,6 +59,14 @@ liberty {
     }
 }
 
+// Property definitions.
+ext  {
+    liberty.server.var.'default.http.port' = '9080'
+    liberty.server.var.'project.name' = project.name
+    liberty.server.var.'app.path' = 'api'
+}
+
+// Test definitions.
 test {
     useJUnitPlatform()
 
@@ -65,7 +79,12 @@ test {
             exceptionFormat = 'full'
             events 'PASSED', 'FAILED', 'SKIPPED'
     }
+
+    systemProperty 'http.port', liberty.server.var.'default.http.port'
+    systemProperty 'app.path',  liberty.server.var.'app.path'
 }
 
+// Task dependencies.
 test.dependsOn 'libertyStart'
 clean.dependsOn 'libertyStop'
+
